--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 //EDIT UNDER THIS ONLY
 
 const  firebaseConfig = {
-apiKey: "API KEY",
-authDomain: "AUTH DOMAIN",
-databaseURL: "DATABSE URL",
-projectId: "PROJECT ID",
-storageBucket: "BUCKET URL",
-messagingSenderId: "SENDER ID",
-appId: "APP ID"
+apiKey: "AIzaSyDyTTimVWow9VMx7w1v94rKePwVpEiPIZw",
+authDomain: "https://bn-last-king-by-bn.web.app/",
+databaseURL: "https://bn-last-king-by-bn-default-rtdb.firebaseio.com",
+projectId: "bn-last-king-by-bn",
+storageBucket: "bn-last-king-by-bn.appspot.com",
+messagingSenderId: "407054165426",
+appId: "1:407054165426:android:013ffc5b4c9c015c4ef0ab"
 };
  
 
